--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     }
 
     #stage{ position:fixed; inset:0; overflow:hidden; }
+
     .wrap{ min-height:100%; display:grid; place-items:center; padding:24px; }
 
     .card{
@@ -66,6 +67,7 @@
       position:relative; z-index:30;
     }
 
+    /* EVET büyümeye başlayınca stage içine taşınacak ve ortalanacak */
     #yes.growing{
       position:absolute;
       left:50%; top:50%;
@@ -167,6 +169,7 @@
       animation: fall linear forwards;
       transform: translateY(-20px) rotate(0deg);
     }
+
     @keyframes fall{
       to{
         transform: translateY(calc(100vh + 60px)) rotate(720deg);
@@ -193,8 +196,10 @@
     </div>
   </div>
 
+  <!-- Confetti layer -->
   <div id="confetti"></div>
 
+  <!-- YIPPEE OVERLAY -->
   <div class="overlay" id="yippeeOverlay" aria-hidden="true">
     <div class="overlayCard" role="dialog" aria-modal="true">
       <div class="gifWrap">
@@ -207,7 +212,11 @@
   </div>
 
   <script>
-    const WEBHOOK_URL = "https://discord.com/api/webhooks/1457909825802604565/Lm6SCoj448heEQ4PrpkNnVxMe5BAWM8k7UCWcfIr_NmaaAd8v7EpC4nTZtjc8WzYKo6U";
+    // ✅ BURAYA Cloudflare Worker URL'ni yaz
+    // Örn: https://kahve-bildir.workers.dev
+    const NOTIFY_URL = "https://kahve-bildir.kerimhuseyin1434.workers.dev/";
+
+    // Yippee GIF
     const YIPPEE_GIF_URL = "https://media1.tenor.com/m/RiZpodi6JD0AAAAC/fast-cat-cat-excited.gif";
 
     const stage = document.getElementById("stage");
@@ -219,37 +228,35 @@
     const overlay = document.getElementById("yippeeOverlay");
     const yippeeImg = document.getElementById("yippeeImg");
     const closeOverlayBtn = document.getElementById("closeOverlay");
+
     const confetti = document.getElementById("confetti");
 
     const PADDING = 14;
     const MIN_DIST = 140;
 
+    // EVET büyüme (sınırsız)
     let yesInStage = false;
     let noInStage = false;
 
-    let baseScale = 1;
-    let proximityBoost = 0;
+    let baseScale = 1;        // kalıcı büyüme
+    let proximityBoost = 0;   // geçici büyüme (0..0.6)
 
     function clamp(n, min, max){ return Math.max(min, Math.min(max, n)); }
 
-    // ===== Discord webhook (FormData: tarayıcı uyumlu + no-cors) =====
+    // ===== Bildirim (Telegram Worker'a) =====
     let lastSendAt = 0;
-    const SEND_COOLDOWN_MS = 600; // aynı anda çok event olursa spammasın
+    const SEND_COOLDOWN_MS = 700; // aynı anda event çoğalırsa spam azaltır
 
-    async function sendDiscord(content){
+    async function sendNotify(text){
       try{
         const now = Date.now();
         if (now - lastSendAt < SEND_COOLDOWN_MS) return;
         lastSendAt = now;
 
-        const fd = new FormData();
-        fd.append("payload_json", JSON.stringify({ content }));
-
-        await fetch(WEBHOOK_URL, {
+        await fetch(NOTIFY_URL, {
           method: "POST",
-          mode: "no-cors",
-          body: fd,
-          keepalive: true
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ text })
         });
       } catch (_) {}
     }
@@ -276,7 +283,7 @@
     }
 
     function growYesPermanently(){
-      baseScale *= 1.18;
+      baseScale *= 1.18; // büyüme hızı
       updateYesScale();
     }
 
@@ -299,7 +306,7 @@
       const prev = noBtn.style.transition;
       noBtn.style.transition = "none";
       noBtn.style.transform = `translate(${startX}px, ${startY}px)`;
-      void noBtn.offsetHeight;
+      void noBtn.offsetHeight; // reflow
       noBtn.style.transition = prev;
 
       noInStage = true;
@@ -348,9 +355,11 @@
       if (yesInStage) updateYesScale();
     }
 
+    // === YIPPEE OVERLAY ===
     function openYippee(){
       const src = YIPPEE_GIF_URL + (YIPPEE_GIF_URL.includes("?") ? "&" : "?") + "t=" + Date.now();
       yippeeImg.src = src;
+
       overlay.classList.add("show");
       overlay.setAttribute("aria-hidden", "false");
     }
@@ -365,11 +374,14 @@
     overlay.addEventListener("click", (e) => { if (e.target === overlay) closeYippee(); });
     window.addEventListener("keydown", (e) => { if (e.key === "Escape") closeYippee(); });
 
+    // === CONFETTI ===
     function launchConfetti(count = 120){
       confetti.innerHTML = "";
       confetti.classList.add("show");
 
-      const colors = ["#22c55e","#3b82f6","#a855f7","#f59e0b","#ef4444","#06b6d4","#e879f9","#84cc16"];
+      const colors = [
+        "#22c55e","#3b82f6","#a855f7","#f59e0b","#ef4444","#06b6d4","#e879f9","#84cc16"
+      ];
 
       for (let i = 0; i < count; i++){
         const el = document.createElement("div");
@@ -402,6 +414,7 @@
       }, 3200);
     }
 
+    // === Mobil uyumlu event noktası ===
     function getPointFromEvent(e){
       const t = e.touches?.[0];
       const x = t?.clientX ?? e.clientX ?? (window.innerWidth/2);
@@ -411,21 +424,21 @@
 
     function onNoAttempt(e){
       if (e.cancelable) e.preventDefault();
-      const pt = getPointFromEvent(e);
 
+      const pt = getPointFromEvent(e);
       growYesPermanently();
-      sendDiscord("❌ **HAYIR**'a basmaya çalıştı 😈");
+      sendNotify("❌ <b>HAYIR</b>'a basmaya çalıştı 😈");
       moveNoButton(pt);
     }
 
     // === EVENTS ===
     yesBtn.addEventListener("click", () => {
-      sendDiscord("✅ **EVET**'e basıldı! ☕🎉");
+      sendNotify("✅ <b>EVET</b>'e basıldı! ☕🎉");
       openYippee();
       launchConfetti();
     });
 
-    // Hayır: mobil + masaüstü
+    // Hayır: mobil + masaüstü hepsi
     noBtn.addEventListener("pointerdown", onNoAttempt, { passive:false });
     noBtn.addEventListener("touchstart", onNoAttempt, { passive:false });
     noBtn.addEventListener("click", onNoAttempt);
